--- a/about.html
+++ b/about.html
@@ -91,6 +91,16 @@
 
 
 
+  <!-- Hero section -->
+  <section class="hero-section">
+    <div class="container d-flex align-items-center justify-content-center fs-1 text-white flex-column">
+      <h1>Some title is here</h1>
+      <h2>and another title</h2>
+
+    </div>
+
+  </section>
+
 
 
 
