--- a/about.html
+++ b/about.html
@@ -1,116 +1,11 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
-
 <head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Portgolio - Sara Mohsenpour</title>
-
-  <!-- boostrap CSS -->
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-  
-    <!-- Bootstrap Icon Library -->
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
-
-  <!-- link CSS -->
-  <!-- <link rel="stylesheet" href="css/main.css"> -->
-  <link rel="stylesheet" href="css/origin.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
 </head>
-
-
-
-
 <body>
-  <!-- navigation -->
-  <header class="bg-secondary rounded-3" style="--bs-bg-opacity: .7;">
-    <!-- <nav class="navbar navbar-expand-lg bg-dark bg-body-tertiary"> -->
-      <!-- <nav class="navbar navbar-expand-lg" style="background-color: #73B19C;"> -->
-        <!-- <nav class="navbar navbar-expand-lg bg-body-primary"> -->
-        <nav class="navbar fw-bold navbar-expand-lg">
-      <!-- full width=xl or md, provide the size -->
-      <div class="container-md">
-        <!-- add logo -->
-        <a class="navbar-brand" href="#home">
-          <img src="images/logogreen.png" alt="palletory logo">
-        </a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
-          aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-            <li class="nav-item">
-              <a class="nav-link text-white active" aria-current="page" href="#home">Home</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link text-white" href="#about">About</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link text-white" href="#portfolio">Portfolio</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link text-white" href="#contact">contact</a>
-            </li>
-          </ul>
-          
-          <form class="d-flex" role="search">
-            <input class="form-control me-1" type="search" placeholder="Search" aria-label="Search">
-            <button class="btn btn-outline-primary text-white border border-white" type="submit">
-              <svg xmlns="http://www.w3.org/2000/svg" width="22" height="22" fill="currentColor" class="bi bi-search-heart-fill" viewBox="0 0 16 16">
-              <path d="M6.5 13a6.47 6.47 0 0 0 3.845-1.258h-.001q.044.06.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1 1 0 0 0-.115-.1A6.47 6.47 0 0 0 13 6.5 6.5 6.5 0 0 0 6.5 0a6.5 6.5 0 1 0 0 13m0-8.518c1.664-1.673 5.825 1.254 0 5.018-5.825-3.764-1.664-6.69 0-5.018"/>
-            </svg></button>
-          </form>
-        </div>
-      </div>
-    </nav>
-
-
-  </header>
-
-  <main>
-        <!-- Hero section -->
-        <!-- <section class="hero-section">
-          <div class="container d-flex align-items-center justify-content-center fs-1 text-white flex-column">
-            <h1>Some title is here</h1>
-            <h2>and another title</h2>
-          </div>
-        </section> -->
-    <section class="banner" id="home">
-      <div class="container-md bg-secondary text-white text-center py-4 mt-5 text-wrap fs-5 px-5" style="--bs-bg-opacity: .7; width: 60%; ">
-        <h1>Friendly Faces,<br>Artistic Spaces</h1>
-        <p>The extraordinary world of LuxPersia, where every masterpiece tells a story of cultural richness and timeless beauty!</p>
-        <a class="btn btn-primary rounded-0 bg-dark border-0 px-3 py-2" href="#about" role="button">Read More</a>
-      </div>
-    </section>
-
-
-
-  </main>
-
-
-
-
-  <!-- Hero section -->
-  <section class="hero-section">
-    <div class="container d-flex align-items-center justify-content-center fs-1 text-white flex-column">
-      <h1>Some title is here</h1>
-      <h2>and another title</h2>
-
-    </div>
-
-  </section>
-
-
-
-
-
-
-  <!-- add Boostrap JS -->
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
-    crossorigin="anonymous"></script>
-
+    
 </body>
-
 </html>
