--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
   <!-- boostrap CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-  
-    <!-- Bootstrap Icon Library -->
+
+  <!-- Bootstrap Icon Library -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
 
   <!-- link CSS -->
@@ -25,9 +25,9 @@
   <!-- navigation -->
   <header class="bg-secondary rounded-3" style="--bs-bg-opacity: .7;">
     <!-- <nav class="navbar navbar-expand-lg bg-dark bg-body-tertiary"> -->
-      <!-- <nav class="navbar navbar-expand-lg" style="background-color: #73B19C;"> -->
-        <!-- <nav class="navbar navbar-expand-lg bg-body-primary"> -->
-        <nav class="navbar fw-bold navbar-expand-lg">
+    <!-- <nav class="navbar navbar-expand-lg" style="background-color: #73B19C;"> -->
+    <!-- <nav class="navbar navbar-expand-lg bg-body-primary"> -->
+    <nav class="navbar fw-bold navbar-expand-lg">
       <!-- full width=xl or md, provide the size -->
       <div class="container-md">
         <!-- add logo -->
@@ -53,13 +53,15 @@
               <a class="nav-link text-white" href="#contact">contact</a>
             </li>
           </ul>
-          
+
           <form class="d-flex" role="search">
             <input class="form-control me-1" type="search" placeholder="Search" aria-label="Search">
             <button class="btn btn-outline-primary text-white border border-white" type="submit">
-              <svg xmlns="http://www.w3.org/2000/svg" width="22" height="22" fill="currentColor" class="bi bi-search-heart-fill" viewBox="0 0 16 16">
-              <path d="M6.5 13a6.47 6.47 0 0 0 3.845-1.258h-.001q.044.06.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1 1 0 0 0-.115-.1A6.47 6.47 0 0 0 13 6.5 6.5 6.5 0 0 0 6.5 0a6.5 6.5 0 1 0 0 13m0-8.518c1.664-1.673 5.825 1.254 0 5.018-5.825-3.764-1.664-6.69 0-5.018"/>
-            </svg></button>
+              <svg xmlns="http://www.w3.org/2000/svg" width="22" height="22" fill="currentColor"
+                class="bi bi-search-heart-fill" viewBox="0 0 16 16">
+                <path
+                  d="M6.5 13a6.47 6.47 0 0 0 3.845-1.258h-.001q.044.06.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1 1 0 0 0-.115-.1A6.47 6.47 0 0 0 13 6.5 6.5 6.5 0 0 0 6.5 0a6.5 6.5 0 1 0 0 13m0-8.518c1.664-1.673 5.825 1.254 0 5.018-5.825-3.764-1.664-6.69 0-5.018" />
+              </svg></button>
           </form>
         </div>
       </div>
@@ -69,26 +71,114 @@
   </header>
 
   <main>
-        <!-- Hero section -->
-        <!-- <section class="hero-section">
+    <!-- Hero section -->
+    <!-- <section class="hero-section">
           <div class="container d-flex align-items-center justify-content-center fs-1 text-white flex-column">
             <h1>Some title is here</h1>
             <h2>and another title</h2>
           </div>
         </section> -->
+
+
+    <!-- Hero-banner section -->
     <section class="banner" id="home">
-      <div class="container-md bg-secondary text-white text-center py-4 mt-5 text-wrap fs-5 px-5" style="--bs-bg-opacity: .7; width: 60%; ">
-        <h1>Friendly Faces,<br>Artistic Spaces</h1>
-        <p>The extraordinary world of LuxPersia, where every masterpiece tells a story of cultural richness and timeless beauty!</p>
-        <a class="btn btn-primary rounded-0 bg-dark border-0 px-3 py-2" href="#about" role="button">Read More</a>
+      <div class="container-xl bg-secondary text-white text-center py-4 mt-5 text-wrap fs-5 px-5"
+        style="--bs-bg-opacity: .7; width: 60%; ">
+        <h1 class="display-1">Friendly Faces,<br>Artistic Spaces</h1>
+        <p>The extraordinary world of LuxPersia, where every masterpiece tells a story of cultural richness and timeless
+          beauty!</p>
+
+        <a class="btn btn-primary rounded-0 bg-dark border-0 px-3 py-2" href="#" role="button">Read More</a>
+      </div>
+    </section>
+
+
+    <!-- Ottawa's Most Opulent Persian Art Gallery section -->
+    <section class="mt-5 py-4" id="about">
+      <div class="container-xl">
+        
+        <div class="row align-items-center">
+          <!-- Header -->
+          <div class="col-sm-6 mb-3">
+            <div class="position-relative">
+              <h2 class="fw-bold text-center">Ottawa's Most Opulent Persian Art Gallery</h2>
+              <p>No matter your passion for Persian art or cultural exploration, LuxPersia can elevate your experience to new heights. Whether you're starting your collection or seeking to enrich your existing one, LuxPersia offers the treasures and expertise you need to immerse yourself in the splendor of Iranian artistry.</p>
+            </div>
+          </div>
+          <!-- text -->
+          <!-- <div class="order-sm-last col-md-12 " >
+          </div> -->
+            <!-- Picture -->
+            <div class="col-sm-6 order-sm-first mb-3 justify-content-center">
+              <div class="position-relative">
+                <img src="./images/birdman.jpg" alt="the man, the moon and two birds artwork" class="img-fluid w-100" >
+                <div class="position-absolute bottom-0 start-0 w-100 p-2 m-0"
+                  style="height: 50%; background: linear-gradient(to top,black, rgba(255, 255, 255, 0));">
+                </div>
+                <div class="position-absolute bottom-0 start-0 w-100 px-4 m-0 text-white">
+                  <p class="fw-bold mb-0">Untitled</p>
+                  <p class="fst-italic">Artist: Saed Farsi Rahimabadi</p>   
+                </div>
+              </div>
+            </div>
+
+        </div>
+      </div>
+    </section>
+
+    <!-- Artistic Essence section -->
+    <section class="mt-5" id="about" style="background-color: #D9D9D9;">
+      <div class="container-xl">
+        <h3 class="py-4 text-center fw-bold">Artistic Essence:<br>Unveiling Home Masterpieces</h3>
+        <div class="row">
+          <!-- the man, the moon and 2 birds -->
+          <div class="col-12 col-sm-4 mb-3">
+            <div class="position-relative">
+              <img src="./images/square-moon.jpg" alt="the man, the moon and two birds artwork" class="img-fluid w-100">
+              <div class="position-absolute bottom-0 start-0 w-100 p-2 m-0"
+                style="height: 50%; background: linear-gradient(to top,black, rgba(255, 255, 255, 0));">
+              </div>
+              <div class="position-absolute bottom-0 start-0 w-100 px-4 m-0 text-white">
+                <p class="fw-bold mb-0">Untitled</p>
+                <p class="fst-italic">Artist: Saed Farsi Rahimabadi</p>   
+              </div>
+            </div>
+          </div>
+          <!-- people artwork -->
+          <div class="col-12 col-sm-4 mb-3">
+            <div class="position-relative">
+              <img src="./images/square-people.jpg" alt="People sitting in a restaurant artwork" class="img-fluid w-100">
+              <div class="position-absolute bottom-0 start-0 w-100 p-2 m-0"
+                style="height: 50%; background: linear-gradient(to top,black, rgba(255, 255, 255, 0));">
+              </div>
+              <div class="position-absolute bottom-0 start-0 w-100 px-4 m-0 text-white">
+                <p class="fw-bold mb-0">Untitled</p>
+                <p class="fst-italic">Artist: Saed Farsi Rahimabadi</p>   
+              </div>
+            </div>
+          </div>
+          <!-- the man artwork -->
+          <div class="col-12 col-sm-4 mb-4">
+            <div class="position-relative">
+              <img src="./images/square-man.jpg" alt="the man artwork" class="img-fluid w-100">
+              <div class="position-absolute bottom-0 start-0 w-100 p-2 m-0"
+                style="height: 50%; background: linear-gradient(to top,black, rgba(255, 255, 255, 0));">
+              </div>
+              <div class="position-absolute bottom-0 start-0 w-100 px-4 m-0 text-white">
+                <p class="fw-bold mb-0">Untitled</p>
+                <p class="fst-italic">Artist: Saed Farsi Rahimabadi</p>   
+              </div>
+            </div>
+          </div>
+        </div>
       </div>
     </section>
 
 
 
+
+
   </main>
-
-
 
 
 
