create onversation part

--- a/index.html
+++ b/index.html
@@ -96,31 +96,32 @@
     <!-- Ottawa's Most Opulent Persian Art Gallery section -->
     <section class="mt-5 py-4" id="about">
       <div class="container-xl">
-        
-        <div class="row align-items-center">
-          <!-- Header -->
-          <div class="col-sm-6 mb-3">
-            <div class="position-relative">
-              <h2 class="fw-bold text-center">Ottawa's Most Opulent Persian Art Gallery</h2>
-              <p>No matter your passion for Persian art or cultural exploration, LuxPersia can elevate your experience to new heights. Whether you're starting your collection or seeking to enrich your existing one, LuxPersia offers the treasures and expertise you need to immerse yourself in the splendor of Iranian artistry.</p>
+
+          <div class="row align-items-center">
+            <!-- Header -->
+            <div class="position-relative col-sm-6 mb-3">
+                <h2 class="fw-bold text-center text-sm-start pb-3">Ottawa's Most Opulent Persian Art Gallery</h2>
+                <p>No matter your passion for Persian art or cultural exploration, LuxPersia can elevate your experience
+                  to new heights. Whether you're starting your collection or seeking to enrich your existing one,
+                  LuxPersia offers the treasures and expertise you need to immerse yourself in the splendor of Iranian
+                  artistry.</p>
             </div>
-          </div>
           <!-- text -->
           <!-- <div class="order-sm-last col-md-12 " >
           </div> -->
-            <!-- Picture -->
-            <div class="col-sm-6 order-sm-first mb-3 justify-content-center">
-              <div class="position-relative">
-                <img src="./images/birdman.jpg" alt="the man, the moon and two birds artwork" class="img-fluid w-100" >
-                <div class="position-absolute bottom-0 start-0 w-100 p-2 m-0"
-                  style="height: 50%; background: linear-gradient(to top,black, rgba(255, 255, 255, 0));">
-                </div>
-                <div class="position-absolute bottom-0 start-0 w-100 px-4 m-0 text-white">
-                  <p class="fw-bold mb-0">Untitled</p>
-                  <p class="fst-italic">Artist: Saed Farsi Rahimabadi</p>   
-                </div>
+          <!-- Picture -->
+          <div class="col-sm-6 order-sm-first mb-3 justify-content-center">
+            <div class="position-relative">
+              <img src="./images/birdman.jpg" alt="untitled artwork, a paint of a man-bird king" class="img-fluid w-100">
+              <div class="position-absolute bottom-0 start-0 w-100 p-2 m-0"
+                style="height: 50%; background: linear-gradient(to top,black, rgba(255, 255, 255, 0));">
+              </div>
+              <div class="position-absolute bottom-0 start-0 w-100 px-4 m-0 text-white">
+                <p class="fst-italic mb-0">Untitled</p>
+                <p class="fw-bold">Artist: Saed Farsi Rahimabadi</p>
               </div>
             </div>
+          </div>
 
         </div>
       </div>
@@ -134,39 +135,39 @@
           <!-- the man, the moon and 2 birds -->
           <div class="col-12 col-sm-4 mb-3">
             <div class="position-relative">
-              <img src="./images/square-moon.jpg" alt="the man, the moon and two birds artwork" class="img-fluid w-100">
+              <img src="./images/square-moon.jpg" alt="untitles artwork of a man, the moon and two birds" class="img-fluid w-100">
               <div class="position-absolute bottom-0 start-0 w-100 p-2 m-0"
                 style="height: 50%; background: linear-gradient(to top,black, rgba(255, 255, 255, 0));">
               </div>
               <div class="position-absolute bottom-0 start-0 w-100 px-4 m-0 text-white">
-                <p class="fw-bold mb-0">Untitled</p>
-                <p class="fst-italic">Artist: Saed Farsi Rahimabadi</p>   
+                <p class="fst-italic mb-0">Untitled</p>
+                <p class="fw-bold">Artist: Saed Farsi Rahimabadi</p>
               </div>
             </div>
           </div>
           <!-- people artwork -->
           <div class="col-12 col-sm-4 mb-3">
             <div class="position-relative">
-              <img src="./images/square-people.jpg" alt="People sitting in a restaurant artwork" class="img-fluid w-100">
+              <img src="./images/square-people.jpg" alt="untitled artwork of the people sitting in a restaurant" class="img-fluid w-100">
               <div class="position-absolute bottom-0 start-0 w-100 p-2 m-0"
                 style="height: 50%; background: linear-gradient(to top,black, rgba(255, 255, 255, 0));">
               </div>
               <div class="position-absolute bottom-0 start-0 w-100 px-4 m-0 text-white">
-                <p class="fw-bold mb-0">Untitled</p>
-                <p class="fst-italic">Artist: Saed Farsi Rahimabadi</p>   
+                <p class="fst-italic mb-0">Untitled</p>
+                <p class="fw-bold">Artist: Saed Farsi Rahimabadi</p>
               </div>
             </div>
           </div>
           <!-- the man artwork -->
           <div class="col-12 col-sm-4 mb-4">
             <div class="position-relative">
-              <img src="./images/square-man.jpg" alt="the man artwork" class="img-fluid w-100">
+              <img src="./images/square-man.jpg" alt="untitled artwork of a man's face and moon in background artwork" class="img-fluid w-100">
               <div class="position-absolute bottom-0 start-0 w-100 p-2 m-0"
                 style="height: 50%; background: linear-gradient(to top,black, rgba(255, 255, 255, 0));">
               </div>
               <div class="position-absolute bottom-0 start-0 w-100 px-4 m-0 text-white">
-                <p class="fw-bold mb-0">Untitled</p>
-                <p class="fst-italic">Artist: Saed Farsi Rahimabadi</p>   
+                <p class="fst-italic mb-0">Untitled</p>
+                <p class="fw-bold">Artist: Saed Farsi Rahimabadi</p>
               </div>
             </div>
           </div>
@@ -175,8 +176,51 @@
     </section>
 
 
+    <!-- Conversation, Over Coffee section -->
+    <section class="mt-5 py-4" id="about">
+      <div class="container-xl">
+
+        <div class="row align-items-center">
+          <!-- Header -->
+          <div class="position-relative col-sm-6 mb-3">
+            <h4 class="fw-bold text-center text-sm-start pb-3">Let's Begin with a Conversation, Over Coffee Perhaps?</h4>
+            <p>We're Fluent in Both English and French, Offering a Personalized Experience. Together, We'll Tailor a Strategy to Showcase LuxPersia's Masterpieces. From Research to Creation, We Bring Your Vision to Life, Ensuring Your Investment Stands Out. Welcome to LuxPersia, Where Creativity Knows No Bounds..</p>
+          </div>
+
+          <!-- Picture -->
+          <div class="col-sm-6 mb-3 justify-content-center">
+            <div class="position-relative">
+              <img src="./images/chat.jpg" alt="the man, the moon and two birds artwork" class="img-fluid w-100">
+              <div class="position-absolute bottom-0 start-0 w-100 p-2 m-0"
+                style="height: 50%; background: linear-gradient(to top,black, rgba(255, 255, 255, 0));">
+              </div>
+              <div class="position-absolute bottom-0 start-0 w-100 px-4 m-0 text-white">
+                <p class="fst-italic mb-0">The Jewish Fortune Teller</p>
+                <p class="fw-bold">Artist: Kamal-ol-Molk</p>
+              </div>
+            </div>
+          </div>
+
+        </div>
+      </div>
+    </section>
 
 
+        <!-- Hero-banner section -->
+        <section class="banner" id="home">
+          <div class="container-xl">
+            <div class="row justify-content-end">
+              <div class="col-lg-6 bg-secondary text-white text-center py-4 mt-5 text-wrap fs-5 px-5"
+                style="--bs-bg-opacity: .7;">
+                <h4 class="fw-bold text-center pb-1">A Place To Be Artist</h4>
+                <p>A Place To Be Artist
+                  our studio serves as a sanctuary where we gather to ideate and craft remarkable creations!</p>
+                <a class="btn btn-primary rounded-0 bg-dark border-0 px-3 py-2" href="#" role="button">More About Us</a>
+              </div>
+            </div>
+          </div>
+        </section>
+        
 
   </main>
 
