--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
               <a class="nav-link text-white" href="#portfolio">Portfolio</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link text-white" href="#contact">contact</a>
+              <a class="nav-link text-white" href="contact.html">contact</a>
             </li>
           </ul>
 
@@ -87,13 +87,16 @@
 
     <!-- Hero-banner section -->
     <section class="banner d-flex align-items-center justify-content-center" id="home">
-      <div class="container-xl bg-secondary text-white text-center py-4 text-wrap  px-5" style="--bs-bg-opacity: .7; width: 60%;">
+      <div class="container-xl bg-secondary text-white text-center py-4 text-wrap fs-5 px-5"
+        style="--bs-bg-opacity: .7; width: 60%;">
         <h1 class="display-1">Friendly Faces,<br>Artistic Spaces</h1>
-        <p class="fs-5">The extraordinary world of LuxPersia, where every masterpiece tells a story of cultural richness and timeless beauty!</p>
+        <p >The extraordinary world of LuxPersia, where every masterpiece tells a story of cultural richness and
+          timeless beauty!</p>
+
         <a class="btn btn-primary rounded-0 bg-dark border-0 px-3 py-2" href="about.html" role="button">Read More</a>
       </div>
     </section>
-<!--     
+    <!--     
     <section class="banner d-flex align-items-center justify-content-center" id="home">
       <div class="container-xl bg-secondary text-white text-center py-4 mt-5 text-wrap fs-5 px-5"
         style="--bs-bg-opacity: .7; width: 60%; ">
@@ -105,11 +108,11 @@
       </div>
     </section>
      -->
-    
+
 
 
     <!-- Ottawa's Most Opulent Persian Art Gallery section -->
-    <section class="mt-5 py-4" id="about">
+    <section class="mt-5" id="about">
       <div class="container-xl">
 
         <div class="row align-items-center">
@@ -196,7 +199,7 @@
 
 
     <!-- Conversation, Over Coffee section -->
-    <section class="mt-5 py-4" id="about">
+    <section class="my-5" id="about">
       <div class="container-xl">
 
         <div class="row align-items-center">
@@ -237,49 +240,46 @@
             <h3 class="fw-bold">A Place To Be Artist</h3>
             <p>A Place To Be Artist our studio serves as a sanctuary where we gather to ideate and craft remarkable
               creations!</p>
-            <a class="btn btn-primary rounded-0 bg-dark border-0 px-3 py-2" href="#" role="button">More About Us</a>
+            <a class="btn btn-primary rounded-0 bg-dark border-0 px-3 py-2" href="about.html" role="button">More About Us</a>
           </div>
         </div>
       </div>
     </section>
+  </main>
 
+  <!-- footer section -->
+  <footer class="text-primary mt-5" style="background-color: #D9D9D9; font-size: smaller;">
+    <div>
+      <!-- For small screens, each section will be in its own row -->
+      <div class="row align-items-center">
+        <!-- Logo section -->
+        <div class="col-12 col-sm-4 mb-3 text-center">
+          <a class="navbar-brand d-inline-block mt-3" href="index.html">
+            <img src="images/logogreen.png" alt="palletory logo" class="align-middle">
+          </a>
+        </div>
 
-<!-- footer section -->
+        <!-- Copyright text section -->
+        <div class="col-12 col-sm-4 text-center mt-3">
+          <p><strong>&copy; All images belong to Sara Mohsenpour</strong><br><strong>OTTAWA — STUDIO:</strong> 1534
+            Baseline Road Ottawa, ON</p>
+        </div>
 
-<footer class="text-primary py-4 mt-5" style="background-color: #D9D9D9; font-size: smaller;">
-  <div class="container-xl">
-    <!-- For small screens, each section will be in its own row -->
-    <div class="row align-items-center">
-      <!-- Logo section -->
-      <div class="col-12 col-sm-4 mb-3 text-center">
-        <a class="navbar-brand d-inline-block" href="index.html">
-          <img src="images/logogreen.png" alt="palletory logo" class="align-middle">
-        </a>
-      </div>
-
-      <!-- Copyright text section -->
-      <div class="col-12 col-sm-4 text-center">
-        <p><strong>&copy; All images belong to Sara Mohsenpour</strong><br><strong>OTTAWA — STUDIO:</strong> 1534 Baseline Road Ottawa, ON</p>
-      </div>
-
-      <!-- Social icons section -->
-      <div class="col-12 col-sm-4 text-center" style="font-size: 150%;">
-        <!-- Add link to icons -->
-        <div class="d-flex justify-content-center">
-          <a href="https://www.facebook.com" aria-label="Facebook" class="text-decoration-none me-2"><i class="fab fa-facebook" aria-hidden="true" style="color: var(--bs-primary);"></i></a>
-          <a href="https://twitter.com" aria-label="Twitter" class="text-decoration-none me-2"><i class="fab fa-twitter" aria-hidden="true" style="color: var(--bs-primary);"></i></a>
-          <a href="https://www.instagram.com" aria-label="Instagram" class="text-decoration-none"><i class="fab fa-instagram" aria-hidden="true" style="color: var(--bs-primary);"></i></a>
+        <!-- Social icons section -->
+        <div class="col-12 col-sm-4 text-center" style="font-size: 150%;">
+          <!-- Add link to icons -->
+          <div class="d-flex justify-content-center">
+            <a href="https://www.facebook.com" aria-label="Facebook" class="text-decoration-none me-2"><i
+                class="fab fa-facebook" aria-hidden="true" style="color: var(--bs-primary);"></i></a>
+            <a href="https://twitter.com" aria-label="Twitter" class="text-decoration-none me-2"><i
+                class="fab fa-twitter" aria-hidden="true" style="color: var(--bs-primary);"></i></a>
+            <a href="https://www.instagram.com" aria-label="Instagram" class="text-decoration-none"><i
+                class="fab fa-instagram" aria-hidden="true" style="color: var(--bs-primary);"></i></a>
+          </div>
         </div>
       </div>
     </div>
-  </div>
-</footer>
-
-  
-  
-  
-
-
+  </footer>
 
 
 
@@ -296,7 +296,5 @@
 
 
 
-
-</html>
 
 </html>
